# customer-churn-predictor

./: .gitignore  config.yaml  conftest.py  docker-compose.yml  main.py  pyproject.toml  setup.py  test_predict.py
.github/workflows/: ci.yml  main.yml
api/: api.py  main.py  schemas.py  services.py
frontend/: app.py
src/data/: __init__.py  loader.py  preprocess.py
src/features/: __init__.py  builder.py
src/models/: __init__.py  evaluate.py  predict.py  train.py
src/utils/: __init__.py  config.py  logger.py
tests/: conftest.py  test_predict.py  test_preprocess.py
